# photo-batch-cpp

./: CMakeLists.txt  argument-parser.cpp  argument-parser.h  convert-mode.cpp  convert-mode.h  mode.cpp  mode.h  photo-batch.cpp  rename-mode.cpp  rename-mode.h  resize-mode.cpp  resize-mode.h  scale-mode.cpp  scale-mode.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test-argument-parser.cpp
